--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -11,9 +12,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.1.0",
-    "nodemon": "^2.0.2",
     "request": "^2.88.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.2.0"
+  },
   "description": ""
 }
